--- a/analyses/beibarys_questions7,8,9.ipynb
+++ b/analyses/beibarys_questions7,8,9.ipynb
@@ -3730,6 +3730,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4dad5f01",
+   "metadata": {},
+   "source": [
+    "`Rationale for the test:`\n",
+    "\n",
+    "We do not know population parameters such as the mean or standard deviation. Rating data is ordinal and does not satisfy normality assumptions. Parametric tests are not appropriate. We compare two independent groups: viewers who are only children and viewers with siblings. A non parametric Mann Whitney U test is suitable for testing differences in typical enjoyment.\n",
+    "\n",
+    "Hypotheses:\n",
+    "\n",
+    "`Null hypothesis H0:` The median rating of The Lion King (1994) given by viewers without siblings is equal to the median rating given by viewers with siblings. \n",
+    "\n",
+    "`Alternative hypothesis Ha:` The median rating of The Lion King (1994) is higher for viewers who are only children than for viewers with siblings.\n",
+    "\n",
+    "This is a one sided test because the question asks whether only children enjoy the movie more.\n",
+    "\n",
+    "Significance level: `α = 0.005`\n",
+    "\n",
+    "Interpretation of the p value\n",
+    "\n",
+    "The p value represents the probability of observing the sample difference, or a more extreme one, assuming the null hypothesis is true.\n",
+    "\n",
+    "If the p value is smaller than 0.005, we reject H0 and conclude that only children enjoy The Lion King (1994) more than viewers with siblings.\n",
+    "If the p value is larger than 0.005, we fail to reject H0 and conclude that the observed difference is consistent with random variation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "6be70913",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Mann-Whitney U statistic for Lion King (1994) reviews: 52929.0\n",
+      "p = 0.978419 ≥ α = 0.005 = Fail to reject H0 (not statistically significant).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# apply the significance test\n",
+    "U1, p = stats.mannwhitneyu(lion_king_reviews_only_child.dropna(), \n",
+    "                           lion_king_reviews_not_only_child.dropna(), \n",
+    "                           alternative=\"greater\")\n",
+    "# print the U statistic \n",
+    "print(f\"\\nMann-Whitney U statistic for Lion King (1994) reviews: {U1}\")\n",
+    "# apply the significance function\n",
+    "significance(0.005, p)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a245fd6d",
+   "metadata": {},
+   "source": [
+    "The Mann Whitney U statistic is 52929.0 with a p value of 0.978419, which is far greater than the significance level α = 0.005.\n",
+    "\n",
+    "We fail to reject the null hypothesis. There is no statistically significant evidence that viewers who are only children enjoy The Lion King (1994) more than viewers with siblings.\n",
+    "\n",
+    "This suggests that enjoyment of The Lion King (1994) does not differ by only child status."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "42d8da53",
    "metadata": {},
    "source": [
