--- a/analyses/beibarys_questions7,8,9.ipynb
+++ b/analyses/beibarys_questions7,8,9.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "id": "66c0caa7",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,54 @@
     "    plt.xticks(rotation=0)  # Keep x tick labels horizontal\n",
     "    plt.title(title)\n",
     "    plt.xlabel(xlabel)\n",
-    "    plt.ylabel(ylabel)"
+    "    plt.ylabel(ylabel)\n",
+    "\n",
+    "# normalized mean rank function\n",
+    "def normalized_mean_rank(series, method=\"average\"):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    rank_data = stats.rankdata(series, method=method)\n",
+    "    max_rank_data = np.max(rank_data)\n",
+    "    return np.mean(rank_data) / max_rank_data\n",
+    "\n",
+    "# franchise analysis function\n",
+    "def franchise_analysis(df, franchise_name):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # empty lists to hold movie names and movie data\n",
+    "    franchise_movies = []\n",
+    "    franchise_survey_data = []\n",
+    "    franchise_mean_normalized_ranks = []\n",
+    "    franchise_medians = []\n",
+    "    franchise_means = []\n",
+    "\n",
+    "    # get all movies of same franchise\n",
+    "    for col in df.columns:\n",
+    "        if franchise_name in col:\n",
+    "            movie_data = df[col].copy().dropna()  # get data for movie\n",
+    "            franchise_movies.append(col)  # add column name to list\n",
+    "            franchise_survey_data.append(movie_data)  # add movie data to list\n",
+    "            franchise_mean_normalized_ranks.append(normalized_mean_rank(movie_data))\n",
+    "            franchise_medians.append(movie_data.median())\n",
+    "            franchise_means.append(movie_data.mean())\n",
+    "    \n",
+    "    # run test\n",
+    "    H, p = stats.kruskal(*franchise_survey_data)\n",
+    "\n",
+    "    # collate results into singular dictionary to return\n",
+    "    results = {\n",
+    "        \"franchise\": franchise_name,\n",
+    "        \"movies\": franchise_movies,\n",
+    "        \"mean_normalized_ranks\": franchise_mean_normalized_ranks,\n",
+    "        \"median_ratings\": franchise_medians,\n",
+    "        \"average_ratings\": franchise_means,\n",
+    "        \"p\": p,\n",
+    "        \"H\": H\n",
+    "    }\n",
+    "\n",
+    "    return results\n",
+    "    "
    ]
   },
   {
@@ -5757,6 +5804,211 @@
    "metadata": {},
    "source": [
     "Since the p-value (6.3794e-10) is far smaller than the significance level α = 0.005, we reject the null hypothesis. This result is statistically significant, meaning the difference in rating distributions between Home Alone (1990) and Finding Nemo (2003) is extremely unlikely to have occurred by random chance. In practical terms, this indicates that the two movies come from different distributions. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab8c2ed2",
+   "metadata": {},
+   "source": [
+    "## Q10 - There are ratings on movies from several franchises ([‘Star Wars’, ‘Harry Potter’, ‘The Matrix’, ‘Indiana Jones’, ‘Jurassic Park’, ‘Pirates of the Caribbean’, ‘Toy Story’, ‘Batman’]) in this dataset. How many of these are of inconsistent quality, as experienced by viewers? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "a4df9551",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Franchise: star wars \t # of Movies: 6\n",
+      "Franchise: harry potter \t # of Movies: 4\n",
+      "Franchise: the matrix \t # of Movies: 3\n",
+      "Franchise: indiana jones \t # of Movies: 4\n",
+      "Franchise: jurassic park \t # of Movies: 3\n",
+      "Franchise: pirates of the caribbean \t # of Movies: 3\n",
+      "Franchise: toy story \t # of Movies: 3\n",
+      "Franchise: batman \t # of Movies: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# copy the data for question 10 to avoid changes\n",
+    "q10_df = df.copy()\n",
+    "\n",
+    "# list of franchises\n",
+    "franchises = [\n",
+    "    \"star wars\",\n",
+    "    \"harry potter\",\n",
+    "    \"the matrix\",\n",
+    "    \"indiana jones\",\n",
+    "    \"jurassic park\",\n",
+    "    \"pirates of the caribbean\",\n",
+    "    \"toy story\",\n",
+    "    \"batman\"\n",
+    "]\n",
+    "\n",
+    "# empty lists to hold analysis results\n",
+    "Hvalues = []\n",
+    "pvalues = []\n",
+    "\n",
+    "for movie_series in franchises:\n",
+    "    res = franchise_analysis(q10_df, movie_series)\n",
+    "    Hvalues.append(res[\"H\"])\n",
+    "    pvalues.append(res[\"p\"])\n",
+    "    \n",
+    "    print(f\"Franchise: {movie_series} \\t # of Movies: {len(res['movies'])}\")\n",
+    "\n",
+    "# results \n",
+    "df_results = pd.DataFrame({\n",
+    "    \"Franchise\": franchises,\n",
+    "    \"p\": pvalues,\n",
+    "    \"H\": Hvalues,\n",
+    "    #\"Movies\": movies_per_franchise\n",
+    "})\n",
+    "\n",
+    "df_results[\"significance\"] = df_results[\"p\"] < 0.005"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "20427fa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Franchise</th>\n",
+       "      <th>p</th>\n",
+       "      <th>H</th>\n",
+       "      <th>significance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>star wars</td>\n",
+       "      <td>8.016477e-48</td>\n",
+       "      <td>230.584175</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>harry potter</td>\n",
+       "      <td>3.433195e-01</td>\n",
+       "      <td>3.331231</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>the matrix</td>\n",
+       "      <td>3.123652e-11</td>\n",
+       "      <td>48.378867</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>indiana jones</td>\n",
+       "      <td>6.272776e-10</td>\n",
+       "      <td>45.794163</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>jurassic park</td>\n",
+       "      <td>7.636930e-11</td>\n",
+       "      <td>46.590881</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>pirates of the caribbean</td>\n",
+       "      <td>3.290129e-05</td>\n",
+       "      <td>20.643998</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>toy story</td>\n",
+       "      <td>5.065805e-06</td>\n",
+       "      <td>24.385995</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>batman</td>\n",
+       "      <td>4.225297e-42</td>\n",
+       "      <td>190.534969</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Franchise             p           H  significance\n",
+       "0                 star wars  8.016477e-48  230.584175          True\n",
+       "1              harry potter  3.433195e-01    3.331231         False\n",
+       "2                the matrix  3.123652e-11   48.378867          True\n",
+       "3             indiana jones  6.272776e-10   45.794163          True\n",
+       "4             jurassic park  7.636930e-11   46.590881          True\n",
+       "5  pirates of the caribbean  3.290129e-05   20.643998          True\n",
+       "6                 toy story  5.065805e-06   24.385995          True\n",
+       "7                    batman  4.225297e-42  190.534969          True"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show results in the dataset\n",
+    "df_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c4954f1",
+   "metadata": {},
+   "source": [
+    "We test whether movie ratings within each franchise are consistent across installments. A significant result indicates inconsistent perceived quality.\n",
+    "\n",
+    "`From the results:`\n",
+    "- Star Wars. Significant. Inconsistent quality.\n",
+    "- Harry Potter. Not significant. Consistent quality.\n",
+    "- The Matrix. Significant. Inconsistent quality.\n",
+    "- Indiana Jones. Significant. Inconsistent quality.\n",
+    "- Jurassic Park. Significant. Inconsistent quality.\n",
+    "- Pirates of the Caribbean. Significant. Inconsistent quality.\n",
+    "- Toy Story. Significant. Inconsistent quality.\n",
+    "- Batman. Significant. Inconsistent quality.\n",
+    "\n",
+    "`Final answer:`\n",
+    "- 7 out of 8 franchises exhibit inconsistent quality as experienced by viewers.\n",
+    "- Only Harry Potter shows no statistically significant evidence of quality inconsistency across its movies."
    ]
   }
  ],
