--- a/analyses/project_code.ipynb
+++ b/analyses/project_code.ipynb
@@ -1339,8 +1339,10 @@
    "id": "c2eec578",
    "metadata": {},
    "source": [
-    "### Mann-Whitney U test (two-sided)\n",
-    "`Rationale for the test:` We do not know population parameters such as the mean or standard deviation. Rating data is ordinal and does not satisfy normality assumptions. Parametric tests are not appropriate. A non parametric Mann Whitney U test is suitable for comparing two independent groups of ordinal ratings. The test evaluates whether the central tendency differs between newer and older movies."
+    "### Kolmogorov-Smirnov Test (two-sided)\n",
+    "`Rationale for the test:` We do not know population parameters such as the mean or standard deviation. Rating data is ordinal and does not satisfy normality assumptions. Parametric tests are therefore not appropriate.\n",
+    "\n",
+    "We apply a two-sample Kolmogorov-Smirnov (KS) test, which is suitable for comparing the entire rating distributions of two independent groups. Unlike tests that focus only on central tendency, the KS test evaluates whether the distributions differ in shape, spread, or skewness. This makes it appropriate for assessing whether newer and older movies are rated differently in any way."
    ]
   },
   {
@@ -1350,25 +1352,25 @@
    "source": [
     "Hypotheses:\n",
     "\n",
-    "`Null hypothesis H0:` The median ratings of newer movies equal the median ratings of older movies.\n",
+    "`Null hypothesis H0:` The rating distributions of newer movies and older movies come from the same population distribution.\n",
     "\n",
-    "`Alternative hypothesis Ha:` The median ratings of newer movies differ from the median ratings of older movies.\n",
+    "`Alternative hypothesis Ha:` The rating distributions of newer movies and older movies come from different population distributions.\n",
     "\n",
     "This is a two sided test because the question asks whether ratings are different, not whether one group is higher.\n",
     "\n",
     "Significance level:`α = 0.005`\n",
     "\n",
     "`Interpretation of the p value:`\n",
-    "The p value represents the probability of observing the sample difference, or a more extreme one, assuming the null hypothesis is true.\n",
+    "The p value represents the probability of observing the maximum difference between the two empirical cumulative distribution functions, or a more extreme one, assuming the null hypothesis is true.\n",
     "\n",
-    "If the p value is smaller than 0.005, the observed difference is unlikely under the null hypothesis. We reject H0 and conclude that newer and older movies receive significantly different median ratings.\n",
+    "If the p value is smaller than 0.005, the observed difference is unlikely under the null hypothesis. We reject H0 and conclude that newer and older movies have significantly different rating distributions.\n",
     "\n",
     "If the p value is larger than 0.005, the observed difference is consistent with random variation. We fail to reject H0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "id": "6f4053dc",
    "metadata": {},
    "outputs": [
@@ -1377,19 +1379,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Mann-Whitney U statistic (standardised ranks): 20283.0000\n",
-      "p = 0.588307 ≥ α = 0.005 = Fail to reject H0 (not statistically significant).\n"
+      "Kolmogorov-Smirnov statistic (standardised ranks): 0.0787\n",
+      "p = 0.541578 ≥ α = 0.005 = Fail to reject H0 (not statistically significant).\n"
      ]
     }
    ],
    "source": [
-    "# apply the mann-whitney u test\n",
-    "u_stat, u_p = stats.mannwhitneyu(old_movies, new_movies, alternative='two-sided')\n",
+    "# apply the kolmogorov-smirnov test\n",
+    "d_stat, d_p = stats.kstest(old_movies, new_movies, alternative='two-sided')\n",
     "\n",
     "# print results \n",
-    "print(f\"\\nMann-Whitney U statistic (standardised ranks): {u_stat:.4f}\")\n",
+    "print(f\"\\nKolmogorov-Smirnov statistic (standardised ranks): {d_stat:.4f}\")\n",
     "# apply significance function \n",
-    "significance(0.005, u_p)"
+    "significance(0.005, d_p)"
    ]
   },
   {
